# Bye-Bye

./: README.md  bye  byebye  function.h  main.c  meson.build  org.gnome.ByeBye.json
data/: meson.build  org.gnome.ByeBye.appdata.xml.in  org.gnome.ByeBye.desktop.in  org.gnome.ByeBye.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: bye-bye-application.c  bye-bye-application.h  bye-bye-window.c  bye-bye-window.h  bye-bye-window.ui  bye-bye.gresource.xml  main.c  meson.build
